--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY="sk-eVKmC0CnuTVCp7r4ytvMbBeq0hfori_kkEaPUYcnLtT3BlbkFJPCr_8BYbFmaJntTF97sHmshcgkLAPDhBlgEO6fr4sA"
-HUGGINGFACEHUB_API_TOKEN = "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"
+OPENAI_API_KEY="************************************************************************"
+HUGGINGFACEHUB_API_TOKEN = "*********************************************"
